
2011-02-03
	* tools/m2s-opencl-kc: Error message for missing APP SDK updated.

2011-02-04
	* Version 3.0 Released

2011-02-23
	* tools/m2s-pipeline: Tool for displaying pipeline debug information moved to the 'tools'
		directory. The dependency with the 'ncurses' library is removed from the
		central Multi2Sim code.
	* tools/Makefile.am: -lncurses flag removed from linking options.

2011-02-23
	* Version 3.0.1 Released

2011-02-03
	* src/libm2skernel/{m2skernel.*, signal.c, context.c}: signal management restructured, and
		new loops added in 'ke_process_events'.
	* src/libm2skernel/syscall.c: system calls 'setitimer', 'getitimer' implemented.
	* src/libm2skernel/syscall.c: system call 'select' implemented (for tv = 0).
	* src/libm2skernel/signal.c: flag 'SA_RESTART' for sigaction restarting system calls.
	* src/libm2skernel/syscall.c: system call 'ioctl' updated for ioctl codes using the
		'struct termios' argument.

2011-02-04
	* src/issue.c: bug fixed in function 'check_if_ready', which caused different performance
		results for experiments using option '-debug:pipeline'.
	* src/commit.c: checking 'ready' property for stores moved here, since this is the point
		when stores are still in the ROB. In issue, they might be already out, and calls
		to 'rf_ready' will provide inconsistent results.

2011-03-22
	* src/libgpukernel: support added for more OpenCL benchmarks.

2011-03-28
	* src/libgpukernel: option '-report:gpu' added to dump GPU report. Statistics gathered
		from kernel execution.


2010-04-02
	* src/libgpukernels: support for kernels, report gpu, and ISA trace updated.

2010-04-04
	* src/m2s.c: detailed simulator command-line options updated to include GPU report.
	* Version 3.0.2 Released

2010-05-05
	* src/libcachesystem/cachesystem.c: additional check in cache configuration files that
		prevents networks from having no lower cache. This caused infinite loops
		in subsequent sanity checks, since no way to main memory could be found.
